# simple_delaunay_lib

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: computation_time_2d.rs  computation_time_3d.rs  delaunay_2d.rs  hilbert_curve_2d.rs
src/: lib.rs
src/algorithm/: mod.rs
src/algorithm/delaunay_2d/: delaunay_struct_2d.rs  geometry_2d.rs  geometry_exact_computation_2d.rs  geometry_operations_2d.rs  mod.rs  simplicial_struct_2d.rs
src/delaunay/delaunay_2d/: delaunay_struct_2d.rs  geometry_operations_2d.rs  mod.rs  simplicial_struct_2d.rs
src/delaunay_2d/: delaunay_struct_2d.rs  geometry_operations_2d.rs  mod.rs  simplicial_struct_2d.rs
src/delaunay_3d/: delaunay_struct_3d.rs  geometry_operations_3d.rs  mod.rs  simplicial_struct_3d.rs
src/exact_computation/: float_ops.rs  geometry_2d.rs  mod.rs
tests/: delaunay_2d_test.rs  delaunay_3d_test.rs  essa_test.rs
