[package]
name = "delaunay_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
nalgebra = "0.31.3"
rand = "0.8.5"
svg = "0.13.1"
num-traits = "0.2.15"
robust = "1.1.0"
log="0.4.20"
env_logger="0.10.0"
